--- a/styles/main.sass
+++ b/styles/main.sass
@@ -2,7 +2,7 @@
 .loader 
 	position: fixed;
 	left: 0px
-	top: 0px
+	top: 0px 
 	width: 100%
 	height: 100%
 	z-index:-1
@@ -16,8 +16,8 @@
 		top:70%
 		font-family: 'Josefin Sans', sans-serif
 		font-weight:600
-.logo
-	img
+.logo-a
+	/*img
 		width:142px
 		height:133px
 		margin-left:auto
@@ -30,20 +30,51 @@
 		box-shadow:0px 1px 20px 2.2px #310a06
 		border-bottom-right-radius:8%
 		border-bottom-left-radius:8%
+		background-color:#fff*/
+	img
+		width:142px
+		height:133px
+		margin-left:auto
+		margin-right:auto
+		border-bottom:2px solid #fff
+		box-shadow:0px 1px 20px 2.2px #310a06
+		border-bottom-right-radius:8%
+		border-bottom-left-radius:8%
 		background-color:#fff
+		position:absolute
+		left: -40px
+		top: 0px !important
+		self-align:center
+.logo-b
+	img
+		width:142px
+		height:133px
+		margin-left:auto
+		margin-right:auto
+		border-bottom:2px solid #fff
+		box-shadow:0px 1px 20px 2.2px #310a06
+		border-bottom-right-radius:8%
+		border-bottom-left-radius:8%
+		background-color:#fff
+		position:absolute
+		left: 0px
+		top: 0px !important
+		self-align:center
 body
 	background-image:url('../images/bg/img.jpg')
 	background-repeat:none
 	background-attachment:fixed
 	overflow-x:hidden
 	width:95%
-	margin:auto 
+	margin-top:0 !important
+	margin:auto
+	z-index:-99
 	
 
-.main
+.big
 	font-family: 'Arvo', serif
 	text-align:center
-	font-size:492px
+	font-size:392px
 	position:absolute
 	left: 0px
 	top: 100px
@@ -52,8 +83,8 @@ body
 	height: 100%
 	color:#fff
 	text-shadow:#460e08 16px 2px 0
-p
-	font-size:30px
+.cess-p
+	font-size:14px 
 	color:#fff
 	text-align:center
 	font-family: 'Josefin Sans', sans-serif
@@ -61,10 +92,10 @@ p
 	text-shadow:#460e08 4px 2px 0
 					
 @media screen and (max-width:1080px)
-	.main
+	.big
 		text-shadow:#460e08 10px 2px 0
 @media screen and (max-width:640px)
-	.main
+	.big
 		text-shadow:#460e08 7px 2px 0
 
 .cess-nav
@@ -90,30 +121,34 @@ p
 		position:absolute
 		top:10px
 		left:20px
-	.main
+	.big
 		top:150px
 	.wrap
 		margin-top:260px
-	.logo
-		img
-			position:absolute
-			left:0
-	
-@media screen and (max-width:600px)
-	.main
-		top:150px
-	.wrap
-		margin-top:120px
-	.logo
+	.logo-a
+		position:absoulte
+	.logo-b
 		img
 			position:static
 			left:0
+	
+@media screen and (max-width:600px)
+	.big
+		top:150px
+	.wrap
+		margin-top:120px
+	.logo-a,
+	.logo-b
+		img
+			position:static
+			left:0
+			margin:0
 a:hover
 	text-decoration:none
 .cess-btn
 	display:flex
 	z-index:9999
-	margin:40px
+	margin:40px auto
 	color:white
 	text-shadow:#460e08 0px 2px 0
 	font-weight:600	
@@ -152,10 +187,15 @@ a:hover
 		text-shadow:#460e08 0px 0px 0
 		box-shadow:0px 2px 10px 2px #310a06
 
-.cess-content
-	margin:4%
+.cess-nav
+	.cess-btn
+		margin:45px 25px !important
 	p
 		text-align:justify
+.cess-content
+	margin:0
+	p
+		text-align:center
 
 .p2
 	display:inline-flex
@@ -179,7 +219,7 @@ a:hover
 	box-shadow:0px 1px 5px 1px #310a06
 	//min-height:600px
 	border-radius:2px
-	padding:5px
+	padding:1px
 	word-wrap:break-word
 	color:#ce3030 !important
 	
@@ -192,7 +232,7 @@ a:hover
 	p
 		color:#ce3030
 		text-shadow:0 0 
-		font-size:27px !important
+		font-size:19px !important 
 .ion
 	color:#ce3030
 	font-size:130px
@@ -218,7 +258,7 @@ a:hover
 	font-size:20px
 	padding:10px
 	font-weight:600	
-	width:60%
+	width:100%
 	margin:auto
 			
 .mob-nav
@@ -259,7 +299,12 @@ a:hover
 	font-size:18px
 	font-weight:400
 
-
+.card-container
+	
+	*	
+		color:black;
+		font-size:initial
+		text-shadow:none
 
 @media only screen and (max-width : 768px) 
 	.anim 
@@ -282,3 +327,21 @@ a:hover
 		-ms-animation: none !important;
 		animation: none !important;
 	
+.owl-theme
+	img
+		height:270px
+
+.div-overlay
+	position:absolute
+	transform: scale(0)
+	transition:all 0.31s cubic-bezier(1, 0.34, 0, 0.98)
+	width:100%
+	height:100%
+	z-index:-9999
+	background-color:rgba(178, 37, 37, 0.43)
+	.inner-lay
+		position:absolute
+		top:40%
+		left:40%
+		color:#fff
+		font-size:25px
