--- a/styles/map.css
+++ b/styles/map.css
@@ -5,7 +5,7 @@
     #map {
         height: 350px;
         width: 90%;
-        padding: 30px 60px 60px 50px;       
-        pointer-events:none;
+        padding: 30px 60px 60px 50px; 
+		pointer-events: auto;
         margin: auto;
-        }
+}
