--- a/styles/main.css
+++ b/styles/main.css
@@ -6,27 +6,25 @@
   background-color: #ce3030;
   z-index: -90; }
 
-/* line 17, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
-.loader {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background: url("../images/logo/logo-1.png") 50% 50% no-repeat #fff; }
-  /* line 25, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
-  .loader h3 {
-    position: fixed;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    z-index: 20;
-    top: 70%;
-    font-family: 'Josefin Sans', sans-serif;
-    font-weight: 600; }
+/*.loader
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
+	background: url('../images/logo/logo-1.png') 50% 50% no-repeat #fff
 
-/* line 34, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+	h3
+		position: fixed;
+		text-align:center
+		width: 100%;
+		height: 100%;
+		z-index: 20;
+		top:70%
+		font-family: 'Josefin Sans', sans-serif
+		font-weight:600*/
+/* line 35, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .logo-a {
   /*img
 		width:142px
@@ -42,7 +40,7 @@
 		border-bottom-right-radius:8%
 		border-bottom-left-radius:8%
 		background-color:#fff*/ }
-  /* line 49, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 50, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .logo-a img {
     width: 142px;
     height: 133px;
@@ -58,7 +56,7 @@
     top: 0px !important;
     self-align: center; }
 
-/* line 64, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 65, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .logo-b img {
   width: 142px;
   height: 133px;
@@ -74,32 +72,33 @@
   top: 0px !important;
   self-align: center; }
 
-/* line 78, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 79, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 body {
-  background-image: url("../images/bg/Elegant_Background-8.jpg");
-  background-repeat: none;
+  background-image: url("../images/bg/Elegant_Background-4.jpg");
   background-attachment: fixed;
   margin-top: 0 !important;
   margin: 0;
   padding: 0;
+  border-top: 4px solid #ce3030;
   z-index: -99;
   overflow-x: hidden !important; }
 
-/* line 88, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 91, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .big {
   font-family: 'Arvo', serif;
   text-align: center;
-  font-size: 392px;
+  font-size: 292px;
   position: absolute;
-  left: 5px;
+  left: 0px;
   top: 130px;
   z-index: -1;
   width: 100%;
+  margin: auto;
   height: 100%;
   color: #f4f4f4;
-  text-shadow: #460e08 8px 2px 0; }
+  text-shadow: #460e08 1px 2px 0; }
 
-/* line 100, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 104, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-p {
   font-size: 14px;
   color: #fff;
@@ -109,36 +108,36 @@ body {
   text-shadow: #460e08 1px 1px 0; }
 
 @media screen and (max-width: 1080px) {
-  /* line 109, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 113, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .big {
     text-shadow: #460e08 10px 2px 0; } }
 
 @media screen and (max-width: 640px) {
-  /* line 112, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 116, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .big {
     text-shadow: #460e08 7px 2px 0; } }
 
-/* line 115, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 119, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-nav {
   display: flex;
   flex-direction: space-around; }
 
-/* line 118, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 122, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .drop {
   display: none; }
 
 @media screen and (max-width: 1124px) {
-  /* line 121, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 125, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-nav .cess-btn {
     margin: 40px 30px; } }
 
 @media screen and (max-width: 1107px) {
-  /* line 128, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 132, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .left-nav,
   .right-nav,
   .p2 {
     display: none !important; }
-  /* line 130, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 134, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .drop {
     display: block;
     cursor: pointer;
@@ -147,39 +146,39 @@ body {
     position: absolute;
     top: 10px;
     left: 20px; }
-  /* line 138, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 142, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .big {
     top: 150px; }
-  /* line 140, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 144, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .wrap {
     margin-top: 260px; }
-  /* line 142, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 146, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .logo-a {
     position: absoulte; }
-  /* line 145, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 149, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .logo-b img {
     position: static;
     left: 0; } }
 
 @media screen and (max-width: 600px) {
-  /* line 150, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 154, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .big {
     top: 150px; }
-  /* line 152, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 156, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .wrap {
     margin-top: 120px; }
-  /* line 156, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 160, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .logo-a img,
   .logo-b img {
     position: static;
     left: 0;
     margin: 0; } }
 
-/* line 160, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 164, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 a:hover {
   text-decoration: none; }
 
-/* line 162, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 166, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-btn {
   display: flex;
   z-index: 9999;
@@ -196,7 +195,7 @@ a:hover {
   border: 2px solid #fff;
   transition: all 0.6s ease-in-out;
   cursor: pointer; }
-  /* line 178, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 182, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-btn:hover {
     text-decoration: none;
     background-color: white;
@@ -205,57 +204,57 @@ a:hover {
     text-shadow: #460e08 0px 0px 0;
     box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 185, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 189, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-o {
   background-color: #ce3030;
   color: #fff;
   border: 4px solid #ce3030;
   transition: all 0.3s ease-in-out; }
-  /* line 190, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 194, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-o:hover {
     background-color: #761515;
     color: white;
     border: 4px solid rgba(235, 14, 14, 0.85);
     box-shadow: none; }
 
-/* line 196, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 200, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .show {
   display: block;
   position: static; }
 
-/* line 199, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 203, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .hide {
   display: block;
   position: absolute;
   position: static; }
 
-/* line 203, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 207, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-active {
   background-color: white;
   color: #ce3030;
   text-shadow: #460e08 0px 0px 0;
   box-shadow: 0px 2px 10px 2px #310a06; }
 
-/* line 210, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 214, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-nav .cess-btn {
   margin: 45px 25px !important; }
 
-/* line 212, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 216, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-nav p {
   text-align: justify; }
 
-/* line 214, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 218, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-content {
   margin: 0; }
-  /* line 216, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 220, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-content p {
     text-align: center; }
 
-/* line 219, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 223, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .p2 {
   display: inline-flex; }
 
-/* line 221, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 225, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .news {
   width: 60%;
   height: auto;
@@ -266,12 +265,12 @@ a:hover {
   background-color: #fff;
   color: #ce3030;
   text-align: center; }
-  /* line 232, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 236, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .news hr {
     background-color: #ce3030;
     height: 2px; }
 
-/* line 235, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 239, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .alt-body {
   background-color: #fff;
   margin: 30px 1%;
@@ -280,40 +279,40 @@ a:hover {
   padding: 1px;
   word-wrap: break-word;
   color: #ce3030 !important; }
-  /* line 245, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 249, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .alt-body h3 {
     color: #8d2116;
     font-weight: 600; }
-  /* line 248, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 252, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .alt-body h4 {
     color: #8d2116;
     font-weight: 600; }
-  /* line 251, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 255, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .alt-body p {
     color: #ce3030;
     text-shadow: 0 0;
     font-size: 19px !important; }
 
-/* line 255, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 259, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .ion {
   color: #ce3030;
   font-size: 130px; }
 
 @media screen and (max-width: 1107px) {
-  /* line 264, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 268, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .alt-body {
     margin-top: 120px; } }
 
 @media screen and (max-width: 602px) {
-  /* line 267, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 271, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .alt-body {
     margin-top: 5px !important; } }
 
-/* line 270, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 274, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .toggle {
   display: none; }
 
-/* line 272, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 276, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .block {
   background: #fff;
   color: #ce3030;
@@ -325,7 +324,7 @@ a:hover {
   width: 100%;
   margin: auto; }
 
-/* line 283, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 287, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .mob-nav {
   position: fixed;
   width: 100% !important;
@@ -335,58 +334,58 @@ a:hover {
   overflow-y: scroll;
   z-index: 9999999;
   background-color: rgba(34, 50, 63, 0.92); }
-  /* line 292, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 296, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .mob-nav .nav-item {
     color: #fff;
     font-size: 30px;
     display: flex;
     text-align: center;
     flex-direction: column; }
-  /* line 298, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 302, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .mob-nav .nav-item + .nav-item {
     border-bottom: 3px solid #fff;
     padding: 15px; }
 
-/* line 303, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 307, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .cess-footer {
   margin: auto;
   background-color: #fff;
   font-size: 18px; }
-  /* line 307, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 311, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-footer li, .cess-footer a {
     color: #ce3030; }
-  /* line 309, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 313, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .cess-footer .f-bot {
     background-color: #ce3030; }
-    /* line 312, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+    /* line 316, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
     .cess-footer .f-bot a {
       color: #fff; }
-    /* line 314, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+    /* line 318, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
     .cess-footer .f-bot a:hover, .cess-footer .f-bot a:focus {
       background-color: #761515; }
     @media screen and (min-width: 768px) {
-      /* line 317, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+      /* line 321, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
       .cess-footer .f-bot li + li {
         border-left: 2px white solid; } }
     @media screen and (max-width: 768px) {
-      /* line 320, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+      /* line 324, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
       .cess-footer .f-bot li + li {
         border-top: 0.5px white solid; } }
 
-/* line 324, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 328, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .ion-ios-heart {
   -vendor-animation-duration: 3s;
   -vendor-animation-delay: 2s;
   -vendor-animation-iteration-count: infinite; }
 
-/* line 331, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 335, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .card-container * {
   color: black;
   font-size: initial;
   text-shadow: none; }
 
 @media only screen and (max-width: 768px) {
-  /* line 337, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 341, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .anim {
     /*CSS transitions*/
     -o-transition-property: none !important;
@@ -407,11 +406,11 @@ a:hover {
     -ms-animation: none !important;
     animation: none !important; } }
 
-/* line 358, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 362, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .owl-theme img {
   height: 270px; }
 
-/* line 361, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+/* line 365, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
 .div-overlay {
   position: absolute;
   transform: scale(0);
@@ -420,7 +419,7 @@ a:hover {
   height: 100%;
   z-index: -9999;
   background-color: rgba(178, 37, 37, 0.43); }
-  /* line 369, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
+  /* line 373, C:/xampp/htdocs/creationhub/alpha_pro_f/styles/main.sass */
   .div-overlay .inner-lay {
     position: absolute;
     top: 40%;
