--- a/styles/main.sass
+++ b/styles/main.sass
@@ -14,14 +14,15 @@ $color-h : #761515
 	
 	background-color:$color-m
 	z-index:-90
-.loader 
+/*.loader 
 	position: fixed;
-	left: 0px
-	top: 0px 
-	width: 100%
-	height: 100%
-	z-index:-1
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: -1;
 	background: url('../images/logo/logo-1.png') 50% 50% no-repeat #fff
+	
 	h3
 		position: fixed;
 		text-align:center
@@ -30,7 +31,7 @@ $color-h : #761515
 		z-index: 20;
 		top:70%
 		font-family: 'Josefin Sans', sans-serif
-		font-weight:600
+		font-weight:600*/
 .logo-a
 	/*img
 		width:142px
@@ -76,27 +77,30 @@ $color-h : #761515
 		top: 0px !important
 		self-align:center
 body
-	background-image: url('../images/bg/Elegant_Background-8.jpg')
-	background-repeat: none
+	background-image: url('../images/bg/Elegant_Background-4.jpg')
+	
+	
 	background-attachment: fixed
 	margin-top: 0 !important
 	margin: 0
 	padding:0
+	border-top:4px solid $color-m
 	z-index: -99
 	overflow-x: hidden !important
 
 .big
 	font-family: 'Arvo', serif
 	text-align:center
-	font-size:392px
+	font-size:292px
 	position:absolute
-	left: 5px
+	left: 0px
 	top: 130px
 	z-index:-1
 	width: 100%
+	margin:auto
 	height: 100%
 	color:#f4f4f4
-	text-shadow:$color-dd 8px 2px 0
+	text-shadow:$color-dd 1px 2px 0
 .cess-p
 	font-size:14px 
 	color:#fff
