--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: sans-serif;
   margin: 0 0 10% 0;
-  background-image: url("../../images/bg/Elegant_Background-5.jpg"); }
+  background-image: url("../images/bg/Elegant_Background-2.jpg"); }
 
 /* line 7, C:/xampp/htdocs/creationhub/alpha_pro_f/admin/css/style.sass */
 header {
